# backend/src/user/entities/user.entity.ts
@@ -26,12 +26,6 @@ export class User {
   @Column({ nullable: true })
   phone: string;
 
-  @Column({ type: 'decimal', precision: 10, scale: 8, nullable: true })
-  latitude: number;
-
-  @Column({ type: 'decimal', precision: 11, scale: 8, nullable: true })
-  longitude: number;
-
   @CreateDateColumn()
   created_at: Date;
 
